--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
  -->
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>chromeSummary extension</title>
     <style type="text/css">
       body {
         margin: 10px;
@@ -39,10 +39,15 @@
       <span>Choose a color</span>
       <select id="dropdown">
         <option selected disabled hidden value=''></option>
-        <option value="white">White</option>
+        <option value="red">Red</option>
+        <option value="orange">Orange</option>
+        <option value="yellow">Yellow</option>
+        <option value ="blue">Blue</option>
+        <option value ="indigo">Indigo</option>
+        <option value ="violet">Violet</option>
         <option value="pink">Pink</option>
         <option value="green">Green</option>
-        <option value="yellow">Yellow</option>
+        <option value ="black">Black</option>
       </select>
     </div>
   </body>
