Added small description

--- a/popup.html
+++ b/popup.html
@@ -34,6 +34,8 @@
   </head>
 
   <body>
+    <h1>Welcome to chromeSummary!</h1>
+    <h2>Looking for some extra fun? Change the colour of your chrome background from boring white to any one of these colours!</h2>
     <h1>Background Color Changer</h1>
     <div id="container">
       <span>Choose a color</span>
