editted extension on chrome

--- a/popup.html
+++ b/popup.html
@@ -35,7 +35,10 @@
 
   <body>
     <h1>Welcome to chromeSummary!</h1>
-    <h2>Looking for some extra fun? Change the colour of your chrome background from boring white to any one of these colours!</h2>
+    <h>To view a summary of an article rather than opening the link,
+    </br> press on the ">>" button you see on your Google query!</br>
+    Looking for some extra fun? Change the colour of your chrome <br/>
+      background from boring white to any one of these colours!</h>
     <h1>Background Color Changer</h1>
     <div id="container">
       <span>Choose a color</span>
