--- a/popup.html
+++ b/popup.html
@@ -41,7 +41,7 @@
       background from boring white to any one of these colours!</h>
     <h1>Background Color Changer</h1>
     <div id="container">
-      <span>Choose a color</span>
+      <span>Choose a colour:  </span>
       <select id="dropdown">
         <option selected disabled hidden value=''></option>
         <option value="red">Red</option>
