--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,10 @@
  -->
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>chromeSummary extension</title>
     <style type="text/css">
       body {
@@ -15,6 +19,11 @@
 
       h1 {
         font-size: 15px;
+      }
+
+      button {
+        font: comic;
+        Color: Green;
       }
 
       #container {
@@ -34,16 +43,17 @@
   </head>
 
   <body>
-    <h1>Welcome to chromeSummary!</h1>
+    <h1><strong>Welcome to chromeSummary!</strong></h1>
     <h>To view a summary of an article rather than opening the link,
     </br> press on the ">>" button you see on your Google query!</br>
     Looking for some extra fun? Change the colour of your chrome <br/>
       background from boring white to any one of these colours!</h>
-    <h1>Background Color Changer</h1>
+    <h1><strong>Background Color Changer:</strong></h1>
     <div id="container">
       <span>Choose a colour:  </span>
       <select id="dropdown">
         <option selected disabled hidden value=''></option>
+        <option value="white">White</option>
         <option value="red">Red</option>
         <option value="orange">Orange</option>
         <option value="yellow">Yellow</option>
